# AdiGrad

./: README.md  pyproject.toml  test.py
adigrad/autograd/: __init__.py  graph_core.py  operators.py  optim.py  test_operators.py
docs/source/: conf.py  index.rst
