[tool.poetry]
name = "adigrad"
version = "0.1.0"
description = "An autograd I built for educational purposes."
authors = ["Adithya Yerramsetty"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
sphinx = "^6.1.3"
furo = "^2022.12.7"
sphinx-autoapi = "^2.0.1"
black = "^23.1.0"
pylint = "^2.17.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
